src/assets/styles.css
/* ... */
.filters {
    display: inline-block;
    vertical-align: top;
}

.filter-panel{
    border: dashed 1px #B2AFAF;
}

.filter-panel .group {
    margin-bottom: 10px;
}

.filter1-text {
    background-color: #ffdc0e;
    border-radius: 50px;
    position: relative;
    margin: 15px;
    padding: 10px;
    overflow-wrap: break-word;
    display: inline-block;
}
.category-header {
    font-weight: bold;
    margin-top: 10px;
}
/*RESEARCHER PAGE*/
.background-grey-researcher {
    background-color: #ececec;
    border-radius: 30px;
    position: relative;
    width: 50%;
    margin: 20px;
    margin-bottom: 30px;
    display: inline-block;
    overflow-y: scroll;
    float: left;
    min-height:500px;
}

.right-content-researcher {
    display: inline-block;
    position: relative;
    vertical-align: top;
   /* margin-left: 20px;*/
    width:40%;
    margin-top: 20px;
    float: right;
}
.right-content {
    display: inline-block;
    position: relative;
    vertical-align: top;
    margin-left: 20px;
    margin-top: 5px;
}

.results {
    display: inline-block;
}

.results-image {
    position: relative;
    display: inline-block;
    float: left;
    width: 100px;
    margin-top: 20px;
    margin-left: 20px;
}
.results-name {
    position: relative;
    float: left;
    text-decoration: underline;
    margin-top: 20px;
}
    .results-name:hover{
        cursor:pointer;
    }
    .results-description {
        color: var(--black);
        font-size: var(--font-size-xxs);
        position: relative;
        margin-top: 25px;
        margin-right: 20px;
        line-height: 15px;
    }
.alert-panel {
    padding: 0.01em 16px;
    margin-top: 16px;
    margin-bottom: 16px;
    height: 60px;
    text-align:center;
    padding-top:25px;
}

.panel-red {
    color: #000 !important;
    background-color: #f2dede;
    border-color: #ebccd1
}

.no-data-container{
    width:600px;
    height:500px;
}
.info-1 {
    display: inline-block;
    position: relative;
    float: left;
    font-size: 18px;
    max-width: 300px;
    font-family: Arial-Bold;
    line-height: 21px;
    margin-top: 20px;
}

.info-2 {
    display: inline-block;
    position: relative;
    float: right;
    font-size: 18px;
    font-family: Arial-Bold;
    line-height: 21px;
    max-width:300px;
    margin-top: 20px;
    padding: 17px;
}

.results-content {
    position: relative;
    display: block;
    font-size: 18px;
    font-family: Arial-Bold;
    margin-left: 20px;
    line-height: 17px;
}

.contact {
    display:block;
    background-color: white;
    border-radius: 50px;
    border: none;
    position: relative;
    padding: 12.5px;
    margin: 20px;
    float: right;
}
    .contact:hover {
        background-color: #B2AFAF;
        cursor:pointer;
    }

.back-to-search {
    background-color: #ececec;
    border-radius: 50px;
    border:none;
    position: relative;
    display: inline-block;
    padding: 12.5px;
    /*  margin: 20px;*/
}
    .back-to-search:hover {
        background-color: #B2AFAF;
        cursor:pointer;
    }

.explore-related {
    display: inline-block;
    position: relative;
    margin: 20px;
    vertical-align: top;
}

.related-scroll {
    background-color: #ececec;
    border-radius: 30px;
    padding: 20px;
    width: 650px;
    height: 150px;
    overflow-x: scroll;
    overflow-y: hidden;
    white-space: nowrap;
    display: inline-block;
}

.related {
    display: inline-block;
}

.related-results {
    display: inline-block;
    position: relative;
    margin: 20px;
    margin-top: 10px;
}

.related-image {
    position: relative;
    display: inline-block;
    float: left;
    width: 100px;
}

.related-title {
    background-color: #ececec;
    font-weight: 700;
    text-decoration: underline;
    position: relative;
    width: 230px;
    padding: 15px;
    margin-left: 30px;
    border-radius: 20px 20px 0px 0px;
}
  .accessibility-ddcontent a:hover {background-color:rgb(228,226,226);}
  
  .accessibility-dropdown:hover .accessibility-ddcontent {display: block;}
  
  .accessibility-dropdown:hover .accessibility-ddbtn {background-color: #fff;}

.e-1, .e-2, .e-3, .e-4, .e-5, .e-6, .e-7, .e-8, .e-9, .e-10, .e-11, .e-12, .e-13, .e-14, .e-15, .e-16, .e-17, .e-18, .e-19, .e-20, .e-21, .e-22, .e-23, .e-24, .e-25, .e-26, .e-27, .e-28, .e-29, .e-30, .e-31, .e-32, .e-33, .e-34, .e-35, .e-36, .e-37, .e-38, .e-39, .e-40, .e-41, .e-42, .e-43, .e-44, .e-45, .e-46, .e-47, .e-48, .e-49, .e-50, .e-51, .e-52, .e-53, .e-54, .e-55 {
    position: relative;
    color: black;
    text-align: center;
    border-radius: 60px;
    padding-top: 30px;
    padding-bottom: 30px;
    padding-left: 10px;
    padding-right: 10px;
}

.e-1, .e-8, .e-15, .e-22, .e-29, .e-36, .e-43, .e-50 {
    background-color: var(--candlelight);
}

.e-2, .e-9, .e-16, .e-23, .e-30, .e-37, .e-44, .e-51 {
    background-color: var(--sunglow);
}

.e-3, .e-10, .e-17, .e-24, .e-31, .e-38, .e-45, .e-52 {
    background-color: var(--yellow-orange);
}

.e-4, .e-11, .e-18, .e-25, .e-32, .e-39, .e-46, .e-53 {
    background-color: var(--fern);
}

.e-5, .e-12, .e-19, .e-26, .e-33, .e-40, .e-47, .e-54 {
    background-color: var(--jade);
}

.e-6, .e-13, .e-20, .e-27, .e-34, .e-41, .e-48, .e-55 {
    background-color: var(--persian-green);
}

.e-7, .e-14, .e-21, .e-28, .e-35, .e-42, .e-49 {
    background-color: var(--wedgewood);
}
/* ... */

